# TP-INF-222-API-Blog

./: .env  README.md  main.py  pyproject.toml  requirements.txt
alembic/versions/: b38e7936356f_ajoute_de_username.py
api/endpoints/: article_route.py  auth_route.py
core/: deps.py  security.py
db/: database.py  init_db.py
endpoints/: article.py
exemple_tests/: conftest.py  test_ai.py  test_auth.py  test_categories.py  test_schemas.py  test_todos.py  test_users.py
models/: article.py  article_model.py  user_model.py
schemas/: article.py  user_schema.py
services/: article.py  article_service.py  user_service.py
tests/: conftest.py  test_articles.py  test_auth.py
